src/test/compile-fail/swap-no-lval.rs
// error-pattern: assigning to non-lvalue

fn main() { 5 <-> 3; }
